# llm.cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
notebook/: layernorm_testgen.ipynb  mhattention_testgen.ipynb
scripts/: format-files.sh  run-cppcheck.sh
shader/: CMakeLists.txt  Compute.metal  MatMulShader.metal
src/: Activation.cpp  Activation.h  Attention.cpp  Attention.h  CMakeLists.txt  Extension.cpp  Extension.h  Gpt2.cpp  Gpt2.h  LayerNorm.cpp  LayerNorm.h  Llm.cpp  Llm.h  MatMul.cpp  MatMul.h  MatOps.cpp  MatOps.h  MetalCompute.cpp  MetalCompute.h
test/: .clang-tidy  CMakeLists.txt  Gpt2Test.cpp  LayerNormTest.cpp  MatMulTest.cpp  MetalTest.cpp  MultiHeadAttentionTest.cpp  main.cpp
